comment and contact section done

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -110,7 +110,7 @@
                         <a href="#" class="comment-img">
                             <img src="http://via.placeholder.com/90x90" alt="thumbnail">
                         </a>
-                        <div class="comment-body">
+                         <div class="comment-body">
                             <h2 class="comment-title">Comment one</h2>
                             <p>Atque suscipit, neque quisquam laboriosam enim officiis, nam nemo cupiditate ipsam eveniet id eaque optio facere! Maxime accusamus repellendus nisi veniam saepe explicabo, voluptatum quod obcaecati, possimus quis expedita? Dignissimos.</p>
                         </div>
@@ -195,10 +195,10 @@
                     </div>
                     <div class="form-group">
                         <label for="message">Message</label>
-                        <textarea class="form-control" name="message" id="message"></textarea>
+                        <textarea class="form-control" name="message" id="message" rows="7"></textarea> <!--ovim rows smo naknadno povecali placeholder tj. textarea-->
                     </div>
                     <div class="form-group">
-                        <button type="submit" name="send" value="yes"></button>
+                        <button class="btn-default" type="submit" name="send" value="yes">Submit</button>
                     </div>
                 </form>
             </div>
